He cambiado el nombre

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Proba web</title>
   </head>
   <body>
-    <h1>Soc Jorge</h1>
+    <h1>Victor JENNIFER</h1>
     <p>Aquesta es la meua pàgina web</p>
   </body>
 </html>
