--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <body>
     <h1>Victor JENNIFER</h1>
     <p>Aquesta es la meua pàgina web</p>
+    <img src="foto.webp" alt="Descripción de la imagen">
   </body>
 </html>
